force-app/main/default/objects/Membership_Promotion__c/Membership_Promotion__c.object-meta.xml
<CustomObject>
    <description>Represents a fitness membership promotion</description>
    <label>Membership Promotion</label>
    <nameField>
        <label>Membership Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>