force-app/main/default/objects/Membership_Promotion__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <description>For promotions with a type of Issue Credits, the amount of credit to award new members</description>
    <inlineHelpText>For promotions with a type of Issue Credits, the amount of credit to award new members</inlineHelpText>
    <label>Credit Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>