force-app/main/default/objects/Membership_Promotion__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GL account associated with this promotion. For Issue Credits promotions, this is the GL account that will be debited as credits are issued.</description>
    <inlineHelpText>The GL account associated with this promotion. For Issue Credits promotions, this is the GL account that will be debited as credits are issued.</inlineHelpText>
    <label>GL Account</label>
    <referenceTo>TREX1__GL_Account__c</referenceTo>
    <relationshipLabel>Membership Promotions</relationshipLabel>
    <relationshipName>Membership_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>