force-app/main/default/objects/Membership_Promotion__c/fields/Void_if_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Void_if_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, promotion awards will be revoked if the membership is cancelled</description>
    <inlineHelpText>If checked, promotion awards will be revoked if the membership is cancelled</inlineHelpText>
    <label>Void if Cancelled</label>
    <type>Checkbox</type>
</CustomField>